--- a/server/views/layout.jade
+++ b/server/views/layout.jade
@@ -2,6 +2,8 @@ doctype html
 html
   head
     title= title
+    search= search
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js", integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o", crossorigin="anonymous")
   body
     block content
