--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,7 +14,56 @@ code {
 }
 
 
+/*Colors*/
 
+.blue{
+  background-color:#1F4B99;
+  color:white;
+}
+
+.teal{
+  background-color: #6CACB9;
+  color:white;
+}
+
+.white{
+  background-color: #FFFFFF;
+  color:black;
+}
+
+.orange{
+  background-color: #DF9563;
+}
+
+.red{
+  background-color: #9E2B0E;
+}
+
+/*Margins*/
+
+.top-10{
+  margin-top: 10px;
+}
+
+.top-20{
+  margin-top: 20px;
+}
+
+.top-30{
+  margin-top: 30px;
+}
+
+.bottom-10{
+  margin-bottom: 10px;
+}
+
+.bottom-20{
+  margin-bottom: 20px;
+}
+
+.bottom-30{
+  margin-bottom: 30px;
+}
 
 /*SideNav*/
 
